[gd_scene load_steps=2 format=3 uid="uid://bw6lkwiufbjbd"]

[ext_resource type="Script" path="res://addons/pbmirror/MirrorPanel.gd" id="1"]

[node name="Mirror" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="deploy_btn" type="Button" parent="."]
layout_mode = 2
disabled = true
text = "Deploy"

[node name="status_label" type="Label" parent="."]
layout_mode = 2
text = "Waiting for HTML5 export..."

[node name="url_label" type="RichTextLabel" parent="."]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
selection_enabled = true

[connection signal="pressed" from="deploy_btn" to="." method="_on_deploy_btn_pressed"]
